# plutarch

./: .gitignore  Makefile  README.md  arc_api_shapes.json  arc_items_full.json  arc_spec.api.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: python-publish-dev.yaml
scripts/: probe_arc_api.py
src/plutarch/: __main__.py  monitor.py
src/plutarch/arc/: __init__.py  client.py  cog.py  engine.py  formatter.py  models.py
src/plutarch/commands/: __init__.py  audio_player.py  exceptions.py  ready.py  record_audio.py  state_interface.py  voice_connections.py  youtube_player.py
src/plutarch/transcribe/: transcribe_wav.py
tests/unit/: test_arc_client.py  test_arc_engine.py  test_arc_formatter.py  test_record_audio.py  test_voice_connections.py
