[build-system]
requires = ["setuptools >= 45.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cruft]
skip = [".cruft.json", ".git/"]

[tool.coverage.run]
omit = [
    "tests/*",
    "docs/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-vv --doctest-modules --doctest-report ndiff"
doctest_optionflags= "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS NUMBER"
testpaths = [
    "tests",
    "src/plutarch",
]
markers = [
    "e2e"
]

[tool.ruff]
lint.select = ["E501", "E", "F", "W", "I", "D", "A", "ARG", "B", "BLE", "C", "DTZ", "EM", "ERA", "EXE", "FBT", "G", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "TRY", "UP", "YTT"]
lint.ignore = ["E501", "S101", "EM101", "TRY003", "EXE002", "D104", "D100", "T201", "RET504", "D107", "D103", "D101", "D102", "ISC001"]

exclude = [
    ".venv",
    "build",
    ".git",
    "docs",
    ".mypy_cache",
]

# Same as Black.
line-length = 88


src = ["src"]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["plutarch"]


[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
